<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ymarq.eu.contacts.ContactsActivityNew$PlaceholderFragment">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listview_contacts"
        />
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">
       <!-- <Button
            android:id="@+id/cancelButton"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="25dp"
            android:text="@string/lbl_cancel"
            android:layout_width="50dp"
            android:background="@drawable/round_button"/>-->

        <ToggleButton
            android:id="@+id/selectAllButton"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"

            android:textOn="@string/lbl_select_all"
            android:textOff="@string/lbl_select_none"
            android:layout_width="50dp"
            android:textColor="@color/textColor"
            android:background="@drawable/round_button"/>

        <ToggleButton
            android:id="@+id/submitButton"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textOn=""
            android:textOff="@string/lbl_ok"
            android:layout_width="50dp"
            android:textColor="@color/textColor"
            android:background="@drawable/round_button"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/rememberFriends"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/label_remember_choice"

            android:textColor="@color/textFieldColor"

            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/selectAllButton"
            />

    </RelativeLayout>

</RelativeLayout>
