<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ymarq.eu.ymarq.BuyerActivity$BuyerFragmentFragment"
    android:background="@color/barMeduimColor">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listview_subscription_list" />
        />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom">

        <AutoCompleteTextView android:id="@+id/txtAddSubscriptionInput" android:layout_width="224dp"
            android:layout_height="wrap_content" android:hint="@string/action_add_product"
            android:inputType="textPersonName" android:maxLines="1"
            android:singleLine="true"
            android:visibility="gone"/>
        />
    </LinearLayout>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_subscription"
        android:id="@+id/BtnAddSubscription"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|bottom"
        android:textColor="@color/textColor"
        android:background="@drawable/round_button"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buy"
        android:id="@+id/btnBuyer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left|bottom"
        android:background="@drawable/round_button"
        android:visibility="gone"/>
</FrameLayout>